<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductAdminActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@color/off_white"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/add_product_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_section"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_section"
            >

            <TextView
                android:id="@+id/admin_dashboard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details_text"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="35dp"
                >
            </TextView>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/underline_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/underline"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/admin_dashboard_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- Product Name -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_text"
                android:textSize="16sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline_one"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="text"
                android:paddingVertical="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name_text"
                />

            <!-- Product Description -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description_text"
                android:textSize="16sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name_edit_text"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/product_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="text"
                android:paddingVertical="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_description_text"
                />



            <!--    Product Price    -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price_text"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_description_edit_text"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:paddingVertical="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_price_text"
                />

            <!--    Product Quantity    -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/available_quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_quantity_text"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_price_edit_text"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/available_quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/available_quantity_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:paddingVertical="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/available_quantity_text"
                />


            <!--    Product Rating    -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_text"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/available_quantity_edit_text"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rating_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rating_text_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:paddingVertical="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_text"
                />

            <!--    Image Upload   -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/upload_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image_text"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_edit_text"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/upload_image_image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/image_icon"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_image_text"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/image_url_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_url_text"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_image_image_view"
                />


            <!-- Update Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button"
                android:text="@string/update_text"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_url_text"
                />

            <!-- Update Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_button"
                android:text="@string/delete_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_button"
                />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delete_button"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>