<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@color/off_white"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_section"
        >

        <TextView
            android:id="@+id/admin_dashboard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard_text"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="35dp"
            >
        </TextView>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/underline_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/underline"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/admin_dashboard_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Card 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card2"
            app:layout_constraintTop_toBottomOf="@+id/underline_one">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Icon -->
                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/product_icon"
                    android:layout_gravity="center" />

                <!-- Title -->
                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_products_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toEndOf="@+id/card1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underline_one">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Icon -->
                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/add_icon"
                    android:layout_gravity="center" />

                <!-- Title -->
                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_products_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 3 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card4"
            app:layout_constraintTop_toBottomOf="@+id/card1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Icon -->
                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/cart_icon"
                    android:layout_gravity="center" />

                <!-- Title -->
                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 4 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toEndOf="@+id/card3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Icon -->
                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/logout_icon"
                    android:layout_gravity="center" />

                <!-- Title -->
                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card4"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--      Footer      -->
    <include
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>